kubernetes/monitoring/controllers/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-devlinks
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "88.155.83.191/32"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.devlinks.uk
      secretName: devlinks-tls
  rules:
    - host: grafana.devlinks.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
